docs: change html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <a href="">2022</a>
             </li>
             <li class="footer-item">
-                <img src="rs_school_js.svg"  class="logo" width= 90  height= 60 alt="logo">
+                <img src="rs_school_js.svg"  class="logo" alt="logo">
             </li>
             <li class="footer-item">
                 <a href="https://rs.school/js/">Link</a>
